Schemas, .env, working server
